# api-client

./: .gitignore  mkdocs.yml  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: apiclient-interface.md  authentication.md  exceptions.md  extensions.md  handling-responses.md  implementation.md  index.md  making-requests.md
scripts/: dep_checker.py  update_version.py
src/apiclient/: __init__.py  authentication_methods.py  client.py  decorates.py  exceptions.py  request_strategies.py
tests/: conftest.py  helpers.py  test_authentication_methods.py  test_client.py  test_paginators.py  test_request_formatters.py  test_request_strategies.py  test_response_handlers.py  test_retrying.py
tests/integration_tests/: test_client_integration.py
