[metadata]
name = api-client
description = Separate the high level client implementation from the underlying CRUD.
long_description = file: README.md
long_description_content_type = text/markdown
author = Mike Wooster
auther = Marcel Johannesmann
author_email = mj0nez@fn.de
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Localization


[options]
package_dir =
    = src
packages = apiclient
install_requires =
    requests
    tenacity
python_requires = >=3.7

[options.package_data]
apiclient = py.typed


[flake8]
extend-ignore = E203,F401,W503,W504
exclude = __init__.py,*.pyc,tests.py,build,dist
paths = ./apiclient/ ./tests/
; # forked config
; max_line_length = 109
; max_complexity = 10
; select = C,E,F,W,B
; exclude=apiclient/__init__.py

[rstcheck]
ignore_language = python




[tool:pytest]
; addopts = --cov=apiclient/ --cov-fail-under=100 --cov-report html
env = 
    ENDPOINT_BASE_URL=http://environment.com

; [coverage:report]
; fail_under = 100
; skip_covered = True

; [isort]
; multi_line_output=3
; include_trailing_comma=true
; force_grid_wrap=0
; use_parentheses=true
; line_length=109
; known_first_party=apiclient,tests
; no_lines_before=STDLIB,LOCALFOLDER
; default_section=THIRDPARTY
